# snu-24-2-cv-team

./: .gitignore  README.md  deep_learning_methods.py  deeplearning_staircase_detection.ipynb  method_test.py  prediction_results.csv  preprocess.py  pyproject.toml  real_video_test.py  texture_det.py  traditional_methods.py
DeepLearning/: README.MD
